@@ -1,3 +1,4 @@
+	* added alert for block being sent to the send buffer
 	* drop support for windows compilers without std::wstring
 	* implemented support for DHT infohash indexing, BEP51
 	* removed deprecated support for file_base in file_storage
